--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -27,6 +27,9 @@
     {{#if script}}
         <script src="{{script}}"></script>
     {{/if}}
+    {{#if script2}}
+        <script src="{{script2}}"></script>
+    {{/if}}
 </head>
 <body>
 <div class="container">
