--- a/views/home.hbs
+++ b/views/home.hbs
@@ -11,4 +11,8 @@
         <span class="button-description">Generates job-listing specific resumes from your provided history</span>
         <span class="button-detail">Created to improve the quality of my applications without spending extensive time hand tailoring my resume</span>
     </button>
+    <button class="resume-button" onclick="window.location.href='/resume';">
+        <img src="/images/resume-icon.png" alt="Resume Icon" class="button-image">
+        <span class="button-title">Resume</span>
+    </button>
 </div>
