--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,5 +1,5 @@
 <div class="nav-bar" id="navbar">
-    <a href="/" class="plain-text">
+    <a href="/" class="navbar-title">
         <div class="logo">
             <img src="/images/favicon.svg" alt="Headshot">
             <h1>Colby T. Dobson</h1>
@@ -8,6 +8,7 @@
     <div id="login-container">
         <div id="login-div" style="display: none;"></div>
         <div id="logout-div" style="display: none;">
+            <image></image>
             <a onclick="logout()">Logout</a>
         </div>
     </div>
