Add resume, schedule accessTokenRefresh, extended servereceive and dynamicresume functionality

--- a/views/resume.hbs
+++ b/views/resume.hbs
@@ -1,1 +1,6 @@
+<div class="download-a">
+    <a href="/colby-dobson-resume.pdf" download>
+        <button class="purple-button">Download Resume</button>
+    </a>
+</div>
 <iframe src="colby-dobson-resume.html"></iframe>
