--- a/public/styles/resume.css
+++ b/public/styles/resume.css
@@ -2,3 +2,14 @@ iframe {
     flex: 1;
     border: none;
 }
+
+.main {
+    justify-content: center;
+    flex-direction: column;
+}
+
+.download-a {
+    justify-content: center;
+    display: flex;
+    padding-bottom: 1%;
+}
