--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -6,7 +6,7 @@
     {{else}}
         <title>Colby T. Dobson</title>
     {{/if}}
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
     <script src="/scripts/base.js"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="/scripts/login.js"></script>
