--- a/public/styles/questionablecocktails.css
+++ b/public/styles/questionablecocktails.css
@@ -1,12 +1,3 @@
-/*!* Basic styles to ensure the background color remains white *!*/
-/*body {*/
-/*  background-color: white;*/
-/*  font-family: Arial, sans-serif;*/
-/*  color: #333;*/
-/*  margin: 20px;*/
-/*  padding: 0;*/
-/*}*/
-
 /* Styling for the main container */
 .base-container {
   max-width: 800px;
@@ -16,6 +7,15 @@
   /*border: 1px solid #ccc;*/
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+h4 {
+  margin: 10px;
+}
+
+.inside-li {
+  margin-bottom: 5px;
+  margin-top: 5px;
 }
 
 /* Styling for the header */
@@ -28,7 +28,7 @@
 /* Styling for the labels */
 label {
   font-size: 1em;
-  color: #555;
+  color: #ABABAB;
   margin-bottom: 5px;
   display: inline-block;
 }
@@ -38,19 +38,23 @@ textarea {
   width: calc(100% - 22px);
   height: 100px;
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid #191919;
   border-radius: 4px;
   font-size: 1em;
   resize: vertical;
+  background-color: #555;
+  color: #C8C8C8;
 }
 
 /* Styling for the select dropdown */
 select {
   width: 100%;
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid #191919;
   border-radius: 4px;
   font-size: 1em;
+  background-color: #555;
+  color: #C8C8C8;
 }
 
 /* Styling for the button */
@@ -58,7 +62,7 @@ input[type="button"] {
   width: 100%;
   padding: 10px;
   background-color: #007bff;
-  color: white;
+  color: #C8C8C8;
   border: none;
   border-radius: 4px;
   font-size: 1em;
@@ -84,8 +88,9 @@ a:hover {
 #recipe {
   margin-top: 20px;
   padding: 10px;
-  background-color: #f9f9f9;
-  border: 1px solid #eee;
+  background-color: #555;
+  border: 1px solid #191919;
   border-radius: 4px;
   font-size: 1em;
+  color: #C8C8C8;
 }
