--- a/public/styles/questionablecocktails.css
+++ b/public/styles/questionablecocktails.css
@@ -21,7 +21,6 @@ h4 {
 /* Styling for the header */
 .qcHeader {
   font-size: 2em;
-  /*color: #444;*/
   text-align: center;
 }
 
@@ -43,7 +42,7 @@ textarea {
   font-size: 1em;
   resize: vertical;
   background-color: #555;
-  color: #C8C8C8;
+  color: #ABABAB;
 }
 
 /* Styling for the select dropdown */
@@ -54,7 +53,7 @@ select {
   border-radius: 4px;
   font-size: 1em;
   background-color: #555;
-  color: #C8C8C8;
+  color: #ABABAB;
 }
 
 /* Styling for the button */
@@ -62,7 +61,7 @@ input[type="button"] {
   width: 100%;
   padding: 10px;
   background-color: #007bff;
-  color: #C8C8C8;
+  color: #ABABAB;
   border: none;
   border-radius: 4px;
   font-size: 1em;
@@ -92,5 +91,5 @@ a:hover {
   border: 1px solid #191919;
   border-radius: 4px;
   font-size: 1em;
-  color: #C8C8C8;
+  color: #ABABAB;
 }
