Finished Questionable Cocktails

--- a/views/questionablecocktailsAbout.hbs
+++ b/views/questionablecocktailsAbout.hbs
@@ -53,3 +53,8 @@
 <h3 id="architecture">Architecture</h3>
 <br>
 <p><img src="/images/qc-overview.jpg" alt="High Level Overview"></p>
+<br>
+<h3 id="team">Team</h3>
+<br>
+<p>Colby Dobson</p>
+<p>Max Villarreal-Blozis</p>
