--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -5,7 +5,7 @@
             <h1>Colby T. Dobson</h1>
         </div>
     </a>
-    <div id="login-container">
+    <div id="login-container" class="google-login-button-container">
         <div id="login-div" style="display: none;"></div>
         <div id="logout-div" style="display: none;">
             <image></image>
