--- a/views/questionablecocktailsHome.hbs
+++ b/views/questionablecocktailsHome.hbs
@@ -3,9 +3,8 @@
     <h1 class="qcHeader">Questionable Cocktails</h1>
 </div>
 <div>
-    <label for="ingredients">Enter your (comma separated) ingredients:</label
-    ><br />
-    <textarea id="ingredients" name="ingredients"></textarea><br />
+    <label for="ingredients">Enter your (comma separated) ingredients:</label><br />
+    <textarea id="ingredients" name="ingredients" placeholder="Ingredients..."></textarea><br />
 </div>
 <div>
     <label for="drink">Select drink type: </label>
