--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -7,6 +7,7 @@
         <title>Colby T. Dobson</title>
     {{/if}}
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
+    <meta name="msvalidate.01" content="EE5E651FF6FE635BDC304C5BC719DF69" />
     <script src="/scripts/base.js"></script>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="/scripts/login.js"></script>
