--- a/views/servereceiveTeam.hbs
+++ b/views/servereceiveTeam.hbs
@@ -2,7 +2,7 @@
 
 <br>
 <div id="sessionForm">
-  <label for="session">Session:</label>
+  <label for="session">Create New Session:</label>
     <br>
   <input type="text" id="session" placeholder="Enter session name" />
   <button onclick="createSession()">Submit</button>
@@ -10,7 +10,7 @@
 
 <br>
 <form id="addPlayerForm">
-  <label for="player">Player Name:</label>
+  <label for="player">Add Player:</label>
     <br>
   <input
     type="text"
@@ -18,7 +18,7 @@
     name="player"
     placeholder="Enter player name" />
 
-  <button type="submit">Add Player</button>
+  <button type="submit">Submit</button>
 </form>
 
 <br>
