--- a/views/servereceiveTeam.hbs
+++ b/views/servereceiveTeam.hbs
@@ -2,7 +2,7 @@
 
 <br>
 <div id="sessionForm">
-  <label for="session">Create New Session:</label>
+  <label for="session">Create Session:</label>
     <br>
   <input type="text" id="session" placeholder="Enter session name" />
   <button onclick="createSession()">Submit</button>
