--- a/views/home.hbs
+++ b/views/home.hbs
@@ -19,5 +19,6 @@
     <button class="resume-button" onclick="window.location.href='/resume';">
         <img src="/images/resume-icon.png" alt="Resume Icon" class="button-image">
         <span class="button-title">Resume</span>
+        <span class="button-description">Pretty much how it sounds</span>
     </button>
 </div>
