--- a/views/servereceiveHome.hbs
+++ b/views/servereceiveHome.hbs
@@ -2,7 +2,8 @@
 
 <form id="createTeamForm">
     <label for="createTeam">Create new team: (a-z, 0-9, _, ', -, .)</label><br>
-  <input type="text" id="createTeam" name="createTeam" placeholder="Enter team name..." required maxlength="20">
+    <input type="text" id="createTeam" name="createTeam" placeholder="Enter team name..." required maxlength="20"
+           oninput="validateTeamName()">
   <button type="submit">Create</button>
 </form>
 <div id="createResult" style="display: none;"></div>
