--- a/views/servereceiveHome.hbs
+++ b/views/servereceiveHome.hbs
@@ -1,7 +1,7 @@
 <h1>Serve Receive Tracker</h1>
 
 <form id="createTeamForm">
-    <label for="createTeam">Create new team: (a-z, 0-9, _, ', -, .)</label><br>
+    <label for="createTeam">Create team: </label><br>
     <input type="text" id="createTeam" name="createTeam" placeholder="Enter team name..." required maxlength="20"
            oninput="validateTeamName()">
   <button type="submit">Create</button>
