--- a/public/styles/questionablecocktails.css
+++ b/public/styles/questionablecocktails.css
@@ -34,7 +34,7 @@ label {
 
 /* Styling for the textarea */
 textarea {
-  width: calc(100% - 22px);
+  width: 100%;
   height: 100px;
   padding: 10px;
   border: 1px solid #191919;
