--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -5,6 +5,7 @@
             <h1>Colby T. Dobson</h1>
         </div>
     </a>
+    <image id="profile"></image>
     <div id="login-container" class="google-login-button-container">
         <div id="login-div" style="display: none;"></div>
         <div id="logout-div" style="display: none;">
