--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -161,6 +161,11 @@ ul, li, ol {
 
 #profile {
     flex: 1;
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+    object-fit: cover;
+    margin-right: 10px;
 }
 
 .centered {
