--- a/views/dynamicresumeHome.hbs
+++ b/views/dynamicresumeHome.hbs
@@ -1,5 +1,6 @@
 <div id="dynamic-resume-container">
 <h1 class="centered">Dynamic Resume Generator</h1>
+    <p>Functionality incomplete</p>
 <button id="logout-button" style="display: none">Logout</button>
 <br /><br />
 <div id="resume-content">
