--- a/views/servereceiveHome.hbs
+++ b/views/servereceiveHome.hbs
@@ -1,5 +1,5 @@
 <h1>Serve Receive Tracker</h1>
-<p>Functionality incomplete</p>
+<p style="color: red">Functionality incomplete</p>
 <br>
 <form id="createTeamForm">
     <label for="createTeam">Create team: </label><br>
